--- a/package.json
+++ b/package.json
@@ -10,31 +10,51 @@
   "dependencies": {
     "@freakycoder/react-native-header-view": "^0.4.13",
     "@nvthai/react-native-swipe-list-view": "^1.5.16",
+    "@react-native-community/masked-view": "^0.1.7",
     "@react-navigation/drawer": "^5.1.1",
     "@react-navigation/material-top-tabs": "^5.1.1",
-    "@react-navigation/native": "^5.0.9",
+    "@react-navigation/native": "^5.1.3",
+    "@react-navigation/stack": "^5.2.8",
     "@types/react-native-snap-carousel": "^3.7.4",
+    "axios": "^0.19.2",
     "expo": "~36.0.0",
+    "expo-barcode-scanner": "^8.1.0",
+    "expo-camera": "~8.0.0",
+    "expo-cli": "^3.18.6",
+    "expo-permissions": "^8.1.0",
+    "mobx": "^5.15.4",
+    "mobx-react": "^6.1.8",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-24h-timepicker": "^1.1.0",
+    "react-native-chart-kit": "^5.5.0",
     "react-native-datepicker": "^1.7.2",
+    "react-native-easy-toast": "^1.2.0",
     "react-native-elements": "^1.2.7",
-    "react-native-gesture-handler": "^1.6.0",
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-modal": "^11.5.6",
     "react-native-paper": "^3.6.0",
+    "react-native-progress-circle": "^2.1.0",
     "react-native-progress-steps": "^1.2.8",
-    "react-native-reanimated": "^1.7.0",
+    "react-native-reanimated": "^1.7.1",
     "react-native-safe-area-context": "^0.7.3",
-    "react-native-screens": "^2.2.0",
+    "react-native-screens": "^2.4.0",
     "react-native-snap-carousel": "^3.8.4",
+    "react-native-svg": "^12.1.0",
+    "react-native-swipe-list-view": "^2.5.0",
     "react-native-tab-view": "^2.13.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
     "rn-modal-picker": "^0.2.9"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-decorators": "^7.8.3",
+    "@babel/preset-flow": "^7.9.0",
     "babel-preset-expo": "~8.0.0",
-    "@babel/core": "^7.0.0"
+    "metro-react-native-babel-preset": "^0.59.0",
+    "shortid": "^2.2.15"
   },
   "private": true
 }
